# minimal-lexical

./: .travis.yml  CHANGELOG  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: Simple.yml
ci/: comprehensive.sh  script.sh  test.sh
data/test-parse-golang/: main.rs
data/test-parse-random/: _common.rs  few_ones.rs  huge-pow10.rs  long-fractions.rs  many-digits.rs  rand-f64.rs  short-decimals.rs  subnorm.rs  tiny-pow10.rs  u64-pow2.rs
data/test-parse-unittests/: main.rs
docs/: Development.md
etc/: bellerophon_table.py
etc/correctness/: Cargo.toml
etc/correctness/rng-tests/: _common.rs  f32.rs
etc/correctness/test-parse-golang/: main.rs
etc/correctness/test-parse-random/: _common.rs  long-fractions.rs  many-digits.rs  u32-small.rs
etc/correctness/test-parse-unittests/: main.rs  to_toml.py
examples/: simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse-float-f32.rs  parse-float-f64.rs  parse.rs
rng-tests/: _common.rs  f32.rs  smoke.rs
scripts/: check.sh  fmt.sh  timings.py
src/: algorithm.rs  bellerophon.rs  bhcomp.rs  bigint.rs  bignum.rs  cached.rs  cached_float80.rs  convert.rs  digit.rs  exponent.rs  extended_float.rs  float.rs  heapvec.rs  large_powers.rs  large_powers32.rs  large_powers64.rs  lemire.rs  lib.rs  mask.rs  math.rs  num.rs  number.rs  parse.rs  powers.rs  rounding.rs  shift.rs  slice.rs  slow.rs  small_powers.rs  stackvec.rs
tests/: algorithm_tests.rs  exponent_tests.rs  extended_float_tests.rs  float_tests.rs  integration_tests.rs  lemire_tests.rs  math_tests.rs  num_tests.rs  parse_tests.rs  rounding_tests.rs  vec_tests.rs
