[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autoexamples = false
build = "build.rs"
categories = ["parsing", "no-std"]
description = "Fast float parsing conversion routines."
documentation = "https://docs.rs/minimal-lexical"
edition = "2018"
keywords = ["parsing", "no_std"]
license = "MIT/Apache-2.0"
name = "minimal-lexical"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/minimal-lexical"
version = "0.1.2"
exclude = [
    "ci/*",
    "etc/*",
    "examples/*",
    "scripts/*"
]

[dependencies]
# Arrayvec is only used if we require stack-allocation.
# TODO(ahuszagh) Need to remove this dependency...
arrayvec = { version = "0.4", optional = true, features = ["array-sizes-33-128"] }

[features]
default = ["std"]
# Use the standard library.
std = []
# Reduce code size at the cost of performance.
compact = []
# TODO(ahuszagh) Need to remove this dependency...
# Change to alloc, since it's additive.
no_alloc = ["arrayvec"]
examples = []

# Internal only features.
# Enable the lint checks.
lint = []

# EXAMPLES

[[bin]]
name = "simple-example"
path = "examples/simple.rs"
required-features = ["examples"]
