[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autoexamples = false
categories = ["parsing", "no-std"]
description = "Fast float parsing conversion routines."
documentation = "https://docs.rs/minimal-lexical"
edition = "2018"
keywords = ["parsing", "no_std"]
license = "MIT/Apache-2.0"
name = "minimal-lexical"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/minimal-lexical"
version = "0.1.3"
exclude = [
    "assets/*",
    "ci/*",
    "docs/*",
    "etc/*",
    "fuzz/*",
    "examples/*",
    "scripts/*"
]

[features]
default = ["std"]
# Use the standard library.
std = []
# Reduce code size at the cost of performance.
compact = []
# Do not use a system allocator anywhere.
no_alloc = []
# Add support for nightly-only features.
nightly = []

# Internal only features.
# Enable the lint checks.
lint = []
